--- a/【好靶场逻辑漏洞】个人信息处存在越权.md
+++ b/【好靶场逻辑漏洞】个人信息处存在越权.md
@@ -1,6 +1,8 @@
 # 0x00 概述
 好靶场是一个国内唯一一家以真实SRC报告制作靶场的安全靶场平台。我们可以在好靶场平台上复现漏洞，进行练习。
 
+点击：http://www.loveli.com.cn:12531/see_bug_one?id=68 开启环境
+
 # 0x01 漏洞解析
 <font style="color:rgba(0, 0, 0, 0.85) !important;">越权获取信息漏洞是 Web 应用中常见的权限控制缺陷，指攻击者通过技术手段绕过系统的权限验证机制，非法访问或获取本不应属于自己权限范围内的敏感信息。该漏洞的核心成因是系统未对用户的操作权限进行严格校验，或权限校验逻辑存在设计缺陷。</font>
 
