--- a/小说/一念破阵/第四章 篡改之劫，后台之影.md
+++ b/小说/一念破阵/第四章 篡改之劫，后台之影.md
@@ -6,6 +6,9 @@
 陆沉瞳孔骤缩。
 他终于明白，为何千年来，玄门世界“灵信之道”日渐衰微——不是天道无情，而是有人窃取了天道之权。
 
+<img width="704" height="1194" alt="图片" src="https://github.com/user-attachments/assets/ccdcd05c-b28b-4792-b8c0-9c5fd6f71884" />
+
+
 #### 【藏经阁密卷：灵信塔后台日志】
 陆沉重返“天机不可泄”阁，以“守信者”之识，破开第三重禁制。
 一卷青铜古册缓缓升起，其上铭刻着密密麻麻的“灵信日志”，每一道符文皆是上古时期的系统记录：
